--- a/VentaLibre/templates/VentaLibre/base.html
+++ b/VentaLibre/templates/VentaLibre/base.html
@@ -89,16 +89,22 @@
     
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2" href="https://getbootstrap.com/docs/5.3/examples/product/#" aria-label="Product">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>
-    </a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Inicio</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Celulares</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Computadoras</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Impresoras</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Enviar mensaje</a>
+ 
+    <a class="py-2 d-none d-md-inline-block" href="{% url  'index' %}">Inicio</a>
+    <a class="py-2 d-none d-md-inline-block" href="{% url 'articulo-list'%}">Lista de articulos</a>
+    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Mis ventas</a>
+    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Enviar mensajes</a>
     <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Mensajes</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">About</a>
+    
+    {%if  user.is_authenticated %}
+        
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'login' %}">Login</a>
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'signup' %}"> Registrarse</a>
+
+    {%endif%}
+
   </nav>
 </header>
 
@@ -131,15 +137,7 @@
         <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Final resource</a></li>
       </ul>
     </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Business</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Education</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Government</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Gaming</a></li>
-      </ul>
-    </div>
+   
     <div class="col-6 col-md">
       <h5>About</h5>
       <ul class="list-unstyled text-small">
