--- a/VentaLibre/templates/VentaLibre/index.html
+++ b/VentaLibre/templates/VentaLibre/index.html
@@ -7,9 +7,9 @@
 <main>
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
-        <h1 class="display-4 fw-normal">Punny headline</h1>
-        <p class="lead fw-normal">Buenas tardes</p>
-        <a class="btn btn-outline-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Coming soon</a>
+        <h1 class="display-4 fw-normal">Venta Libre</h1>
+        <p class="lead fw-normal">Venda sus dispositivos con tan solo hacer click!</p>
+        <a class="btn btn-outline-secondary" href="{% url 'articulo-create' %}">Vender</a>
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
       <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
