--- a/VentaLibre/templates/VentaLibre/base.html
+++ b/VentaLibre/templates/VentaLibre/base.html
@@ -92,16 +92,28 @@
  
     <a class="py-2 d-none d-md-inline-block" href="{% url  'index' %}">Inicio</a>
     <a class="py-2 d-none d-md-inline-block" href="{% url 'articulo-list'%}">Lista de articulos</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Mis ventas</a>
+   
     <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Enviar mensajes</a>
     <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Mensajes</a>
     
-    {%if  user.is_authenticated %}
-        
-        <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a class="py-2 d-none d-md-inline-block" href="{% url 'login' %}">Login</a>
-        <a class="py-2 d-none d-md-inline-block" href="{% url 'signup' %}"> Registrarse</a>
+    {% if  user.is_authenticated %}
+      <a class="py-2 d-none d-md-inline-block" href="{% url 'articulo-mine' %}">Mis ventas</a>
+
+        {% if user.profile %}
+          <a class="py-2 d-none d-md-inline-block" href="{% url 'profile-update' user.profile.id %}">Editar perfil</a>
+          
+        {% else %}
+          <a class="py-2 d-none d-md-inline-block" href="{% url 'profile-create' %}">Crear perfil</a>
+          
+      
+        {% endif%}
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">{{ user.username }} | Salir</a>
+      
+      
+      
+      {%else%}
+      <a class="py-2 d-none d-md-inline-block" href="{% url 'login' %}">Ingresar</a>
+      <a class="py-2 d-none d-md-inline-block" href="{% url 'signup' %}"> Registrarse</a>
 
     {%endif%}
 
