--- a/VentaLibre/templates/VentaLibre/base.html
+++ b/VentaLibre/templates/VentaLibre/base.html
@@ -89,12 +89,12 @@
     
 <header class="site-header sticky-top py-1">
   <nav class="container d-flex flex-column flex-md-row justify-content-between">
- 
+   
     <a class="py-2 d-none d-md-inline-block" href="{% url  'index' %}">Inicio</a>
     <a class="py-2 d-none d-md-inline-block" href="{% url 'articulo-list'%}">Lista de articulos</a>
-   
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Enviar mensajes</a>
-    <a class="py-2 d-none d-md-inline-block" href="https://getbootstrap.com/docs/5.3/examples/product/#">Mensajes</a>
+    <a class="py-2 d-none d-md-inline-block" href="{% url 'mensaje-create'%}">Enviar mensaje</a>
+    
+    
     
     {% if  user.is_authenticated %}
       <a class="py-2 d-none d-md-inline-block" href="{% url 'articulo-mine' %}">Mis ventas</a>
@@ -107,6 +107,7 @@
           
       
         {% endif%}
+        <a class="py-2 d-none d-md-inline-block" href="{% url 'mensaje-list' %}"> Mensajes</a>
         <a class="py-2 d-none d-md-inline-block" href="{% url 'logout' %}">{{ user.username }} | Salir</a>
       
       
@@ -117,6 +118,11 @@
 
     {%endif%}
 
+    <form action="{% url 'articulo-search' %}" class="d-flex">
+      <input class="form-control me-2" name="criterio" type="search" placeholder="Buscar un articulo" aria-label="Search">
+      <button class="btn btn-outline-success" type="submit">Buscar</button>
+    </form>
+
   </nav>
 </header>
 
@@ -125,41 +131,17 @@
 
 <footer class="container py-5">
   <div class="row">
-    <div class="col-12 col-md">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mb-2" role="img" viewBox="0 0 24 24"><title>Product</title><circle cx="12" cy="12" r="10"></circle><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"></path></svg>
-      <small class="d-block mb-3 text-muted">© 2017–2022</small>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Features</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Cool stuff</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Random feature</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Team feature</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Stuff for developers</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Another one</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Last time</a></li>
-      </ul>
-    </div>
-    <div class="col-6 col-md">
-      <h5>Resources</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Resource name</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Resource</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Another resource</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Final resource</a></li>
-      </ul>
-    </div>
-   
+    
     <div class="col-6 col-md">
       <h5>About</h5>
       <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Team</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Locations</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Privacy</a></li>
-        <li><a class="link-secondary" href="https://getbootstrap.com/docs/5.3/examples/product/#">Terms</a></li>
+        <li><a class="link-secondary" href="{% url 'about' %}">Acerca de mi</a></li>
+        
       </ul>
     </div>
-  </div>
+    
+   
+    
 </footer>
 
 
