agrego detalles en los articulos

--- a/VentaLibre/templates/VentaLibre/about.html
+++ b/VentaLibre/templates/VentaLibre/about.html
@@ -16,7 +16,7 @@
                 <p>programar. </p>
                 <p>La página web que desarrollé para el proyecto final se llama “Venta Libre”.  Está inspirada en el sitio  </p>
                 <p>web de Mercado Libre y la función de la misma consiste en vender artículos de tecnología como  </p>
-                <p>celulares, tablets y computadoras. Los usuarios tienen la posibilidad publicar en el sitio sus ventas </p>
+                <p>celulares, tablets y computadoras. Los usuarios tienen la posibilidad de publicar en el sitio sus ventas, </p>
                 <p>editarlas y borrarlas. Los usuarios pueden registrarse e iniciar sesión. Además, pueden enviar  </p>
                 <p>mensajes, editarlos y borrarlos.</p>
                 
