--- a/VentaLibre/templates/VentaLibre/index.html
+++ b/VentaLibre/templates/VentaLibre/index.html
@@ -8,8 +8,13 @@
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
       <div class="col-md-5 p-lg-5 mx-auto my-5">
         <h1 class="display-4 fw-normal">Venta Libre</h1>
-        <p class="lead fw-normal">Venda sus dispositivos con tan solo hacer click!</p>
+        
+        <p class="lead fw-normal">Venda sus articulos con tan solo hacer click!</p>
+        {% if  user.is_authenticated %}
         <a class="btn btn-outline-secondary" href="{% url 'articulo-create' %}">Vender</a>
+        {%else%}
+        <a class="btn btn-outline-secondary" href="{% url 'login' %}">Inicie sesión</a>
+        {%endif%}
       </div>
       <div class="product-device shadow-sm d-none d-md-block"></div>
       <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
